crates/wac-parser/tests/resolution/fail/world-include-conflict.wac
package test:comp;

world w1 {
    export a: func();
}

world w2 {
    include w1;
    export a: interface {

    };
}